--- a/notebooks/imdb_sentiment_classification_cpu.ipynb
+++ b/notebooks/imdb_sentiment_classification_cpu.ipynb
@@ -9,9 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0802 21:31:59.503633 4448435648 file_utils.py:41] PyTorch version 1.5.0 available.\n",
-      "I0802 21:32:09.337933 4448435648 file_utils.py:57] TensorFlow version 2.2.0-rc3 available.\n",
-      "I0802 21:32:12.139955 4448435648 modeling.py:230] Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
+      "I0802 21:55:42.304335 4759973312 file_utils.py:41] PyTorch version 1.5.0 available.\n",
+      "I0802 21:55:51.165117 4759973312 file_utils.py:57] TensorFlow version 2.2.0-rc3 available.\n",
+      "I0802 21:55:53.406702 4759973312 modeling.py:230] Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex .\n",
       "wandb: WARNING If you're specifying your api key in code, ensure this code is not shared publically.\n",
       "wandb: WARNING Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
       "wandb: WARNING Calling wandb.login() without arguments from jupyter should prompt you for an api key.\n",
@@ -19,8 +19,8 @@
       "/Users/victor/anaconda3/lib/python3.7/site-packages/scipy/sparse/sparsetools.py:21: DeprecationWarning: `scipy.sparse.sparsetools` is deprecated!\n",
       "scipy.sparse.sparsetools is a private module for scipy.sparse, and should not be used.\n",
       "  _deprecated()\n",
-      "I0802 21:32:16.984387 4448435648 textcleaner.py:37] 'pattern' package not found; tag filters are not available for English\n",
-      "W0802 21:32:17.341480 4448435648 deprecation.py:323] From /Users/victor/anaconda3/lib/python3.7/site-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "I0802 21:55:57.316155 4759973312 textcleaner.py:37] 'pattern' package not found; tag filters are not available for English\n",
+      "W0802 21:55:57.530451 4759973312 deprecation.py:323] From /Users/victor/anaconda3/lib/python3.7/site-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
       "wandb: WARNING If you're specifying your api key in code, ensure this code is not shared publically.\n",
@@ -122,10 +122,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0802 21:35:47.054378 4448435648 fetch_dataset.py:16] making final data set from raw data\n",
-      "I0802 21:35:47.055405 4448435648 fetch_dataset.py:21] project directory ../\n",
-      "I0802 21:35:47.056774 4448435648 fetch_dataset.py:30] output path ../data/raw\n",
-      "I0802 21:35:52.328063 4448435648 fetch_dataset.py:92] download complete\n"
+      "I0802 21:55:57.558845 4759973312 fetch_dataset.py:16] making final data set from raw data\n",
+      "I0802 21:55:57.559670 4759973312 fetch_dataset.py:21] project directory ../\n",
+      "I0802 21:55:57.560317 4759973312 fetch_dataset.py:30] output path ../data/raw\n",
+      "I0802 21:56:02.651846 4759973312 fetch_dataset.py:92] download complete\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
     "\n",
     "parser.add_argument('--max_text_len', type=int, default=100, required=False,\n",
     "                    help='maximum length of text')\n",
-    "parser.add_argument('--epochs', type=int, default=1, required=False,\n",
+    "parser.add_argument('--epochs', type=int, default=2, required=False,\n",
     "                    help='number of epochs')\n",
     "parser.add_argument('--lr', type=float, default=.00003, required=False,\n",
     "                    help='learning rate')\n",
@@ -486,8 +486,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0802 21:35:54.622811 4448435648 configuration_utils.py:283] loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-config.json from cache at /Users/victor/.cache/torch/transformers/e1a2a406b5a05063c31f4dfdee7608986ba7c6393f7f79db5e69dcd197208534.117c81977c5979de8c088352e74ec6e70f5c66096c28b61d3c50101609b39690\n",
-      "I0802 21:35:54.623731 4448435648 configuration_utils.py:319] Model config RobertaConfig {\n",
+      "I0802 21:56:04.426320 4759973312 configuration_utils.py:283] loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-config.json from cache at /Users/victor/.cache/torch/transformers/e1a2a406b5a05063c31f4dfdee7608986ba7c6393f7f79db5e69dcd197208534.117c81977c5979de8c088352e74ec6e70f5c66096c28b61d3c50101609b39690\n",
+      "I0802 21:56:04.427195 4759973312 configuration_utils.py:319] Model config RobertaConfig {\n",
       "  \"_num_labels\": 2,\n",
       "  \"architectures\": [\n",
       "    \"RobertaForMaskedLM\"\n",
@@ -543,8 +543,8 @@
       "  \"vocab_size\": 50265\n",
       "}\n",
       "\n",
-      "I0802 21:35:56.539196 4448435648 tokenization_utils.py:504] loading file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-vocab.json from cache at /Users/victor/.cache/torch/transformers/d0c5776499adc1ded22493fae699da0971c1ee4c2587111707a4d177d20257a2.ef00af9e673c7160b4d41cfda1f48c5f4cba57d5142754525572a846a1ab1b9b\n",
-      "I0802 21:35:56.540449 4448435648 tokenization_utils.py:504] loading file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-merges.txt from cache at /Users/victor/.cache/torch/transformers/b35e7cd126cd4229a746b5d5c29a749e8e84438b14bcdb575950584fe33207e8.70bec105b4158ed9a1747fea67a43f5dee97855c64d62b6ec3742f4cfdb5feda\n"
+      "I0802 21:56:06.505392 4759973312 tokenization_utils.py:504] loading file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-vocab.json from cache at /Users/victor/.cache/torch/transformers/d0c5776499adc1ded22493fae699da0971c1ee4c2587111707a4d177d20257a2.ef00af9e673c7160b4d41cfda1f48c5f4cba57d5142754525572a846a1ab1b9b\n",
+      "I0802 21:56:06.506091 4759973312 tokenization_utils.py:504] loading file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-merges.txt from cache at /Users/victor/.cache/torch/transformers/b35e7cd126cd4229a746b5d5c29a749e8e84438b14bcdb575950584fe33207e8.70bec105b4158ed9a1747fea67a43f5dee97855c64d62b6ec3742f4cfdb5feda\n"
      ]
     }
    ],
@@ -586,8 +586,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0802 21:35:57.687205 4448435648 configuration_utils.py:283] loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-config.json from cache at /Users/victor/.cache/torch/transformers/e1a2a406b5a05063c31f4dfdee7608986ba7c6393f7f79db5e69dcd197208534.117c81977c5979de8c088352e74ec6e70f5c66096c28b61d3c50101609b39690\n",
-      "I0802 21:35:57.688177 4448435648 configuration_utils.py:319] Model config RobertaConfig {\n",
+      "I0802 21:56:07.645015 4759973312 configuration_utils.py:283] loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-config.json from cache at /Users/victor/.cache/torch/transformers/e1a2a406b5a05063c31f4dfdee7608986ba7c6393f7f79db5e69dcd197208534.117c81977c5979de8c088352e74ec6e70f5c66096c28b61d3c50101609b39690\n",
+      "I0802 21:56:07.645920 4759973312 configuration_utils.py:319] Model config RobertaConfig {\n",
       "  \"_num_labels\": 2,\n",
       "  \"architectures\": [\n",
       "    \"RobertaForMaskedLM\"\n",
@@ -643,7 +643,7 @@
       "  \"vocab_size\": 50265\n",
       "}\n",
       "\n",
-      "I0802 21:35:58.852410 4448435648 modeling_utils.py:507] loading weights file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-pytorch_model.bin from cache at /Users/victor/.cache/torch/transformers/228756ed15b6d200d7cb45aaef08c087e2706f54cb912863d2efe07c89584eb7.49b88ba7ec2c26a7558dda98ca3884c3b80fa31cf43a1b1f23aef3ff81ba344e\n"
+      "I0802 21:56:08.717937 4759973312 modeling_utils.py:507] loading weights file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-pytorch_model.bin from cache at /Users/victor/.cache/torch/transformers/228756ed15b6d200d7cb45aaef08c087e2706f54cb912863d2efe07c89584eb7.49b88ba7ec2c26a7558dda98ca3884c3b80fa31cf43a1b1f23aef3ff81ba344e\n"
      ]
     }
    ],
@@ -726,24 +726,39 @@
       "\tadd_(Number alpha, Tensor other)\n",
       "Consider using one of the following signatures instead:\n",
       "\tadd_(Tensor other, *, Number alpha)\n",
-      "Training Loss 0.696: 100%|██████████| 25/25 [02:35<00:00,  6.20s/it]\n",
-      "Eval Loss 0.692: 100%|██████████| 25/25 [00:39<00:00,  1.56s/it]\n",
-      "Eval Loss 0.672: 100%|██████████| 7/7 [00:08<00:00,  1.28s/it]\n",
-      "  0%|          | 0/7 [00:00<?, ?it/s]"
+      "Training Loss 0.679: 100%|██████████| 25/25 [02:11<00:00,  5.25s/it]\n",
+      "Eval Loss 0.682: 100%|██████████| 25/25 [00:32<00:00,  1.31s/it]\n",
+      "Eval Loss 0.66: 100%|██████████| 7/7 [00:08<00:00,  1.19s/it] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss = 0.689 Train metric = 0.0 Val loss = 0.685 Val metric = 0.0\n"
+      "Train loss = 0.681 Train metric = 0.088 Val loss = 0.675 Val metric = 0.047\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:08<00:00,  1.27s/it]\n"
+      "Training Loss 0.648: 100%|██████████| 25/25 [02:07<00:00,  5.10s/it]\n",
+      "Eval Loss 0.614: 100%|██████████| 25/25 [00:35<00:00,  1.40s/it]\n",
+      "Eval Loss 0.553: 100%|██████████| 7/7 [00:09<00:00,  1.37s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss = 0.622 Train metric = 0.818 Val loss = 0.612 Val metric = 0.825\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7/7 [00:08<00:00,  1.20s/it]\n"
      ]
     }
    ],
@@ -891,6 +906,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_output1 = trainer.test_output"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -899,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +959,7 @@
     "\n",
     "parser.add_argument('--max_text_len', type=int, default=100, required=False,\n",
     "                    help='maximum length of text')\n",
-    "parser.add_argument('--epochs', type=int, default=1, required=False,\n",
+    "parser.add_argument('--epochs', type=int, default=2, required=False,\n",
     "                    help='number of epochs')\n",
     "parser.add_argument('--lr', type=float, default=.00003, required=False,\n",
     "                    help='learning rate')\n",
@@ -982,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -990,15 +1014,15 @@
      "output_type": "stream",
      "text": [
       "GPU available: False, used: False\n",
-      "I0802 21:39:35.790220 4448435648 distributed.py:29] GPU available: False, used: False\n",
+      "I0802 22:02:11.158276 4759973312 distributed.py:29] GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
-      "I0802 21:39:35.792098 4448435648 distributed.py:29] TPU available: False, using: 0 TPU cores\n",
+      "I0802 22:02:11.160154 4759973312 distributed.py:29] TPU available: False, using: 0 TPU cores\n",
       "\n",
       "  | Name   | Type               | Params\n",
       "----------------------------------------------\n",
       "0 | model  | TransformerWithCLS | 124 M \n",
       "1 | metric | PLMetric           | 0     \n",
-      "I0802 21:39:35.872110 4448435648 lightning.py:1495] \n",
+      "I0802 22:02:11.207234 4759973312 lightning.py:1495] \n",
       "  | Name   | Type               | Params\n",
       "----------------------------------------------\n",
       "0 | model  | TransformerWithCLS | 124 M \n",
@@ -1039,7 +1063,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val loss = 0.692 val metric = 0.0 \n",
+      "val loss = 0.618 val metric = 0.867 \n",
       "\r"
      ]
     },
@@ -1054,7 +1078,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "134caffadc1a4c43999aeb3dfd01c033",
+       "model_id": "f9164e90b55041dfbd6bc3ae5d5d9598",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1084,16 +1108,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 00000: val_loss reached 0.52726 (best 0.52726), saving model to /Users/victor/Documents/Development/NLP_pipeline/models/_ckpt_epoch_0.ckpt as top 1\n",
-      "I0802 21:42:13.743013 4448435648 model_checkpoint.py:346] \n",
-      "Epoch 00000: val_loss reached 0.52726 (best 0.52726), saving model to /Users/victor/Documents/Development/NLP_pipeline/models/_ckpt_epoch_0.ckpt as top 1\n"
+      "Epoch 00000: val_loss reached 0.38745 (best 0.38745), saving model to /Users/victor/Documents/Development/NLP_pipeline/models/_ckpt_epoch_0.ckpt as top 1\n",
+      "I0802 22:04:33.996357 4759973312 model_checkpoint.py:346] \n",
+      "Epoch 00000: val_loss reached 0.38745 (best 0.38745), saving model to /Users/victor/Documents/Development/NLP_pipeline/models/_ckpt_epoch_0.ckpt as top 1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val loss = 0.527 val metric = 0.757 \n"
+      "val loss = 0.387 val metric = 0.831 \n"
      ]
     },
     {
@@ -1108,7 +1132,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss = 0.657 Train metric = 0.492\n",
+      "Train loss = 0.504 Train metric = 0.758\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Validating', layout=Layout(flex='2'), m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 00001: val_loss reached 0.26939 (best 0.26939), saving model to /Users/victor/Documents/Development/NLP_pipeline/models/_ckpt_epoch_1.ckpt as top 1\n",
+      "I0802 22:06:52.128142 4759973312 model_checkpoint.py:346] \n",
+      "Epoch 00001: val_loss reached 0.26939 (best 0.26939), saving model to /Users/victor/Documents/Development/NLP_pipeline/models/_ckpt_epoch_1.ckpt as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val loss = 0.269 val metric = 0.864 \n",
+      "Train loss = 0.349 Train metric = 0.841\n",
       "\n"
      ]
     }
@@ -1257,14 +1313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:13<00:00,  1.92s/it]\n"
+      "100%|██████████| 7/7 [00:11<00:00,  1.68s/it]\n"
      ]
     }
    ],
@@ -1282,19 +1338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'test_output1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-bbc8cb231bc9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_output1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_output1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest_output2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_output2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorrcoef\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_output1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_output2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'test_output1' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.86330536],\n",
+       "       [0.86330536, 1.        ]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
